# mineclaude

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.arm64.yml  docker-compose.yml  pyproject.toml
agent/: action_queue.py  agent.py  belief_check.py  bridge.py  claude.py  compaction.py  gamestate.py  main.py  mcp_server.py  memory.py  monitor.py  plan.py  pricing.py  primitives.py  prompt.py  providers.py  recipes.py  reflexes.py  runtime.py  sandbox.py  session_log.py
bridge/: baritone.py  blocks.py  minescript_api.py  mutation_log.py  player_control.py  recipes.py  screenshot.py  server.py  world_cache.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
mc-client/: Dockerfile  Dockerfile.arm64  download-arm64-natives.sh  download-mods.sh  entrypoint.arm64.sh  entrypoint.sh  merge-arm64-natives-into-jars.sh  options.txt
mc-mod/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
mc-server/: ops.json
mineclaude/: action_queue.py  bridge.py  gamestate.py  main.py  mcp_server.py  models.py  monitor.py  primitives.py  recipes.py  reflexes.py  runtime.py  sandbox.py  session_log.py
scripts/: gen_item_icons.mjs  gen_skill_docs.py  session_report.py  smoke_native_bridge.sh
tests/: conftest.py  test_action_queue.py  test_agent_chat_queue.py  test_baritone.py  test_blocks.py  test_bridge_routing.py  test_compaction.py  test_mcp_server.py  test_memory.py  test_monitor_console.py  test_plan.py  test_primitives.py  test_providers.py  test_recipes.py  test_reflexes.py  test_runtime.py  test_sandbox.py
(+112 files in other folders)
