[project]
name = "mineclaude"
version = "0.1.0"
description = "LLM-powered Minecraft bot agent"
requires-python = ">=3.13"
dependencies = [
    "anthropic",
    "httpx",
    "websockets",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
tracing = [
    "langfuse",
    "opentelemetry-instrumentation-anthropic",
]

[project.scripts]
mineclaude = "agent.main:main"

[tool.setuptools]
packages = ["agent"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
