[project]
name = "mineclaude"
version = "0.1.0"
description = "Headless Minecraft bot runtime, driven over MCP"
requires-python = ">=3.13"
dependencies = [
    "aiohttp",
    "httpx",
    "websockets",
    "mcp",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
mineclaude = "mineclaude.main:main"

[tool.setuptools]
packages = ["mineclaude"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests that spin up the full docker-compose stack (slow, opt-in via --run-e2e)",
]
